Disable database schema sync step in workflow
Comment out the sync database schema step in workflow.

--- a/.github/workflows/sync-database-schema.yml
+++ b/.github/workflows/sync-database-schema.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install deps
         run: bun i
 
-      - name: sync database schema to dbdocs
-        env:
-          DBDOCS_TOKEN: ${{ secrets.DBDOCS_TOKEN }}
-        run: npm run db:visualize
+      # - name: sync database schema to dbdocs
+      #   env:
+      #     DBDOCS_TOKEN: ${{ secrets.DBDOCS_TOKEN }}
+      #   run: npm run db:visualize
